bug: Fixed standings on mobile - eliminates hz scrolling

--- a/src/App.css
+++ b/src/App.css
@@ -353,6 +353,7 @@ main {
   main {
     position: absolute;
     left: 0;
+    width: 65%;
   }
 
 }
